# RethoughtAI

./: LICENSE  README.md  pyproject.toml
adapter/: pyproject.toml
adapter/adapter/: cli.py
configs/: baxter.yaml
inference/: pyproject.toml
inference/inference/: cli.py
recorder/: pyproject.toml
recorder/configs/: generic.yaml
recorder/recorder/: cli.py  session.py  viz.py
recorder/recorder/configs/: baxter.yaml
