[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rai-adapter"
version = "0.1.0"
description = "RAI Adapter — convert MCAP recordings to LeRobot datasets and push to HuggingFace"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "click",
    "forge-robotics",
    "huggingface_hub",
]

[project.scripts]
adapter = "adapter.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["adapter"]
