[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rai-inference"
version = "0.1.0"
description = "RAI Inference — deploy trained LeRobot policies to ROS2 robots"
requires-python = ">=3.12"
dependencies = [
    "pyyaml",
    "click",
]

[project.scripts]
inference = "inference.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["inference"]
