[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rai-recorder"
version = "0.1.0"
description = "RAI Recorder — collect robot demonstrations and stream live to Rerun"
requires-python = ">=3.12"
dependencies = [
    "pyyaml",
    "click",
    "rerun-sdk",
]

[project.scripts]
recorder = "recorder.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["recorder"]
